test_scores/negative_dimers/features/O96017.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O96017.pkl.xz